crates/diffguard-testkit/tests/snapshots/snapshot_tests__file_builder_mode_change.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: file
---
diff --git a/script.sh b/script.sh
old mode 100644
new mode 100755
