crates/diffguard-testkit/tests/snapshots/snapshot_tests__file_builder_modified.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: file
---
diff --git a/src/lib.rs b/src/lib.rs
index 0000000..1111111 100644
--- a/src/lib.rs
+++ b/src/lib.rs
@@ -1,1 +1,2 @@
 fn existing() {}
+fn new_function() {}
