crates/diffguard-testkit/tests/snapshots/snapshot_tests__file_builder_new_file.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: file
---
diff --git a/src/new.rs b/src/new.rs
new file mode 100644
index 0000000..1111111 100644
--- /dev/null
+++ b/src/new.rs
@@ -0,0 +1,1 @@
+fn init() {}
