crates/diffguard-testkit/tests/snapshots/snapshot_tests__hunk_builder_additions_only.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: hunk
---
@@ -9,1 +10,4 @@
+new line 1
+new line 2
+new line 3
