crates/diffguard-testkit/tests/snapshots/snapshot_tests__hunk_builder_context_only.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: hunk
---
@@ -5,3 +5,3 @@
 line 1
 line 2
 line 3
