crates/diffguard-testkit/tests/snapshots/snapshot_tests__minimal_config.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: json
---
{
  "defaults": {
    "base": "origin/main",
    "diff_context": 0,
    "fail_on": "error",
    "head": "HEAD",
    "max_findings": 200,
    "scope": "added"
  },
  "rule": [
    {
      "exclude_paths": [],
      "id": "test.rule",
      "ignore_comments": false,
      "ignore_strings": false,
      "languages": [],
      "message": "Test rule matched",
      "paths": [],
      "patterns": [
        "test"
      ],
      "severity": "warn"
    }
  ]
}
